# Projeto_UNIFECAF

./: .env  .env.example  .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/config/: database.rs  mod.rs
src/database/: db_estoque.sql
src/handlers/: auth_handler.rs
src/models/: user.rs
src/routes/: route.rs
src/services/: auth_service.rs
tests/: auth_handler.rs  auth_service.rs  user_test.rs
